# pharmawatch

./: api_test.txt  docker-compose.yml
database/init/: 001_create_schema.sql
docker/node/: Dockerfile
docker/python/: Dockerfile
docs/: development_plan.md  metadata.txt  research_brief.md  technical_feasibility_audit.md
docs/design/: INGESTION_LAYER_DESIGN.md  ORCHESTRATION_LAYER_DESIGN.md  STORAGE_LAYER_DESIGN.md
docs/requirements/: Functional_Requirements.md  REQ-1.2_Data_Schema_Design.md  REQ-1.4_Compliance_and_Governance_Framework.md  REQ-1.5_Output_and_UX_Specification.md
pharmawatch_repo/docs/design/: INFRASTRUCTURE_DESIGN.md
pharmawatch_repo/docs/implementation/: PHASE_3_MVP_PLAN.md
services/harvester/: pyproject.toml  verify_scrapers.py
services/harvester/src/: scraper.py  server.py  worker.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/: __init__.py  orchestrator.py  server.py
services/ui/src/: index.html
