[project]
name = "orchestrator"
version = "0.1.0"
description = "PharmaWatch Orchestrator – 4-Stage Intelligence Pipeline"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]